Fixed recipe detail buttons spacing

--- a/src/index.css
+++ b/src/index.css
@@ -91,16 +91,12 @@ body {
   height: 100%;
 }
 
-.recipe.instructions {
+.recipe.details {
   grid-row: 3;
   grid-column: 2;
-  justify-self: end;
-  margin-right: 16px;
-}
-
-.recipe.ingredients {
-  grid-row: 3;
-  grid-column: 2;
-  justify-self: start;
-  margin-left: 16px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width: 75%;
 }
